# pulp-fiction-dash

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs
.github/workflows/: build-server.yml  ci.yml
.render/: production.Dockerfile
client/: Cargo.toml  angular.json  package.json
client/src/: index.html  styles.less
client/src/app/: app-routing.module.ts  app.component.html  app.component.less  app.component.ts  app.module.ts
client/src/app/components/editor/: editor.component.ts
client/src/app/components/loading/: loading.component.html  loading.component.ts
client/src/app/models/api/: api-response.model.ts  index.ts
client/src/app/models/news/: index.ts  news-document.model.ts  newspost-form.model.ts
client/src/app/models/user/: client-user.model.ts  index.ts  login-user.model.ts  roles.enum.ts
client/src/app/modules/material/: material.module.ts
client/src/app/pages/docs/: docs.component.less
client/src/app/pages/news/: index.ts  news.component.html  news.component.less  news.component.ts
client/src/app/pages/news/newspost-form/: newspost-form.component.html  newspost-form.component.less  newspost-form.component.spec.ts  newspost-form.component.ts
client/src/app/pages/queue/: queue.component.html  queue.component.less  queue.component.ts
client/src/app/resolvers/: loading.resolver.ts
client/src/app/services/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  index.ts
client/src/app/services/contrib/: news.service.ts
client/src/app/services/util/loading/: index.ts  loading.service.ts
src/: main.rs
src/api/: mod.rs
src/api/admin/: mod.rs
src/api/auth/: login.rs  mod.rs
src/api/auth/models/: client_user.rs  jwt_payload.rs  login_user.rs  mod.rs
src/api/contrib/: mod.rs
src/api/contrib/news/: mod.rs
src/api/contrib/news/models/: mod.rs  newspost_form.rs
src/db/: mod.rs
src/db/news/: mod.rs  news_category.rs  news_document.rs
src/db/users/: audit_session.rs  mod.rs  roles.rs  user_document.rs
src/util/parsing/: count_words.rs  mod.rs  sanitize_html.rs
static/: .gitignore  3rdpartylicenses.txt  index.html  main.00b656e86a6f417d397d.js  main.63de2bcc07490d541c4a.js  main.a10910febb7d0c2bcc77.js  main.js  main.js.map  polyfills.js  styles.853f835251f9871ebedb.css  styles.js  styles.js.map
