[package]
name = "pulp-fiction-dash"
version = "0.1.0"
authors = ["Alyx Mote <figments@outlook.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }

# MongoDB
async-std = "1.6.4"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }

[workspace]
members = [
    "client"
]