[package]
name = "pulp-fiction-dash"
version = "0.1.0"
authors = ["Alyx Mote <figments@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }

# MongoDB
async-std = "1.6.5"
futures = "0.3.5"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
chrono = { version = "0.4.19", features = ["serde"] }

# Webserver
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
ammonia = "3.1.0"
voca_rs = "1.12.0"
jsonwebtoken = "7.2.0"
maplit = "1.0.2"
nanoid = "0.3.0"
easy-hasher = "2.2.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
argonautica = "0.2.0"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["serve", "helmet", "json"]
default-features = false